testsuite/veronac/resolution/compile-fail/multiple-definitions.out/stderr.txt
multiple-definitions.verona:6:7: error: Symbol 'SameClass' is already defined in this scope
class SameClass {}
      ^~~~~~~~~
multiple-definitions.verona:5:7: note: 'SameClass' was previously defined here
class SameClass {}
      ^~~~~~~~~
multiple-definitions.verona:10:24: error: Symbol 'X' is already defined in this scope
class SameTypeParam[X, X] {}
                       ^
multiple-definitions.verona:10:21: note: 'X' was previously defined here
class SameTypeParam[X, X] {}
                    ^
multiple-definitions.verona:15:28: error: Symbol 'x' is already defined in this scope
  same_param(x: U64 & imm, x: U64 & imm) { }
                           ^
multiple-definitions.verona:15:14: note: 'x' was previously defined here
  same_param(x: U64 & imm, x: U64 & imm) { }
             ^
multiple-definitions.verona:21:9: error: Symbol 'x' is already defined in this scope
    var x;
        ^
multiple-definitions.verona:20:9: note: 'x' was previously defined here
    var x;
        ^
multiple-definitions.verona:27:9: error: Symbol 'x' is already defined in this scope
    var x;
        ^
multiple-definitions.verona:26:13: note: 'x' was previously defined here
  param_var(x: U64 & imm) {
            ^
multiple-definitions.verona:35:3: error: Class 'SameField' already has a member named 'field'
  field: U64 & imm;
  ^~~~~
multiple-definitions.verona:34:3: note: 'field' was previously defined here
  field: U64 & imm;
  ^~~~~
multiple-definitions.verona:42:3: error: Class 'SameMethod' already has a member named 'method'
  method() {}
  ^~~~~~
multiple-definitions.verona:41:3: note: 'method' was previously defined here
  method() {}
  ^~~~~~
multiple-definitions.verona:49:3: error: Class 'SameFieldMethod1' already has a member named 'name'
  name() {}
  ^~~~
multiple-definitions.verona:48:3: note: 'name' was previously defined here
  name: U64 & imm;
  ^~~~
multiple-definitions.verona:56:3: error: Class 'SameFieldMethod2' already has a member named 'name'
  name: U64 & imm;
  ^~~~
multiple-definitions.verona:55:3: note: 'name' was previously defined here
  name() {}
  ^~~~
9 errors generated
